--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools">
 
+  <uses-permission android:name="android.permission.VIBRATE"></uses-permission>
+  <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
   <application
     android:allowBackup="true"
     android:dataExtractionRules="@xml/data_extraction_rules"
