--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ dependencies {
 
   implementation libs.androidx.core.ktx
   implementation libs.androidx.appcompat
-  implementation libs.google.android.material
+  implementation libs.android.material
   testImplementation libs.junit
   androidTestImplementation libs.androidx.test.ext.junit
   androidTestImplementation libs.androidx.test.espresso.core
