--- a/el/build.gradle
+++ b/el/build.gradle
@@ -33,7 +33,7 @@ android {
 dependencies {
   implementation libs.androidx.core.ktx
   implementation libs.androidx.appcompat
-  implementation libs.google.android.material
+  implementation libs.android.material
 
   testImplementation libs.junit
   androidTestImplementation libs.androidx.test.ext.junit
