--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,20 +1,22 @@
 [versions]
 android-gradle-plugin = "7.3.1"
-
-[libraries]
-androidx-appcompat = "androidx.appcompat:appcompat:1.7.0-alpha01"
-androidx-core-ktx = "androidx.core:core-ktx:1.9.0"
-androidx-test-espresso-core = "androidx.test.espresso:espresso-core:3.5.0-rc01"
-androidx-test-ext-junit = "androidx.test.ext:junit:1.1.4-rc01"
-google-android-material = "com.google.android.material:material:1.8.0-alpha02"
-junit = "junit:junit:4.13.2"
+kotlin-android = "1.7.20"
 
 [plugins]
 android-application = { id = "com.android.application", version.ref="android-gradle-plugin" }
 android-library = { id = "com.android.library", version.ref="android-gradle-plugin" }
-ben-manes-versions = "com.github.ben-manes.versions:0.43.0"
-kotlin-android = "org.jetbrains.kotlin.android:1.7.20"
-version-catalog-update = "nl.littlerobots.version-catalog-update:0.7.0"
+kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin-android" }
+
+ben-manes-versions = { id = "com.github.ben-manes.versions", version = "0.43.0" }
+version-catalog-update = { id = "nl.littlerobots.version-catalog-update", version = "0.7.0" }
+
+[libraries]
+android-material = { module = "com.google.android.material:material", version = "1.8.0-alpha02" }
+androidx-appcompat = { module = "androidx.appcompat:appcompat", version = "1.7.0-alpha01" }
+androidx-core-ktx = { module = "androidx.core:core-ktx", version = "1.9.0" }
+androidx-test-espresso-core = { module = "androidx.test.espresso:espresso-core", version = "3.5.0-rc01" }
+androidx-test-ext-junit = { module = "androidx.test.ext:junit", version = "1.1.4-rc01" }
+junit = { module = "junit:junit", version = "4.13.2" }
 
 # [versions]
 # key = ""
@@ -28,3 +30,14 @@ version-catalog-update = "nl.littlerobots.version-catalog-update:0.7.0"
 # key = ""
 # key = { id = "", version = "" }
 # key = { id = "", version.ref = "" }
+
+
+
+
+
+
+
+
+
+
+
