--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,10 @@
 [versions]
-android-gradle-plugin = "7.3.1"
-kotlin-android = "1.7.20"
+android-gradle-plugin = "8.0.0-alpha08"
+kotlin-android = "1.8.0-Beta"
 
 [plugins]
-android-application = { id = "com.android.application", version.ref="android-gradle-plugin" }
-android-library = { id = "com.android.library", version.ref="android-gradle-plugin" }
+android-application = { id = "com.android.application", version = "8.0.0-alpha08" }
+android-library = { id = "com.android.library", version = "8.0.0-alpha08" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin-android" }
 
 ben-manes-versions = { id = "com.github.ben-manes.versions", version = "0.44.0" }
