--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ def isNonStable = { String version ->
 
 
 // https://github.com/ben-manes/gradle-versions-plugin
-tasks.named("dependencyUpdates").configure {
+//tasks.named("dependencyUpdates").configure {
 //  resolutionStrategy {
 //    componentSelection {
 //      all {
@@ -41,4 +41,4 @@ tasks.named("dependencyUpdates").configure {
 //      }
 //    }
 //  }
-}
+//}
