--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,17 +3,25 @@
 android-gradle-plugin = "7.3.1"
 #kotlin-android = "1.8.0-Beta"
 kotlin-android = "1.7.21"
+ben-manes-versions = "0.44.0"
+android-material = "1.8.0-beta01"
+
+androidx-appcompat = "1.7.0-alpha01"
+androidx-core-ktx = "1.9.0"
+androidx-test-espresso-core = "3.5.0"
+androidx-test-ext-junit = "1.1.4"
+junit = "4.13.2"
 
 [plugins]
-ben-manes-versions = { id = "com.github.ben-manes.versions", version = "0.44.0" }
+ben-manes-versions = { id = "com.github.ben-manes.versions", version.ref = "ben-manes-versions" }
 android-application = { id = "com.android.application", version.ref = "android-gradle-plugin" }
 android-library = { id = "com.android.library", version.ref = "android-gradle-plugin" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin-android" }
 
 [libraries]
-android-material = { module = "com.google.android.material:material", version = "1.8.0-beta01" }
-androidx-appcompat = { module = "androidx.appcompat:appcompat", version = "1.7.0-alpha01" }
-androidx-core-ktx = { module = "androidx.core:core-ktx", version = "1.9.0" }
-androidx-test-espresso-core = { module = "androidx.test.espresso:espresso-core", version = "3.5.0" }
-androidx-test-ext-junit = { module = "androidx.test.ext:junit", version = "1.1.4" }
-junit = { module = "junit:junit", version = "4.13.2" }
+android-material = { module = "com.google.android.material:material", version.ref = "android-material" }
+androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "androidx-appcompat" }
+androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "androidx-core-ktx" }
+androidx-test-espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "androidx-test-espresso-core" }
+androidx-test-ext-junit = { module = "androidx.test.ext:junit", version.ref = "androidx-test-ext-junit" }
+junit = { module = "junit:junit", version.ref = "junit" }
